AC_INIT
AM_INIT_AUTOMAKE(apps, 1.00.0)

AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

package=cmm

LIBNFCONNTRACK_REQUIRED=0.0.16
PKG_CHECK_MODULES(LIBNFCONNTRACK, libnetfilter_conntrack >= $LIBNFCONNTRACK_REQUIRED,,
	AC_MSG_ERROR(Cannot find libnetfilter_conntrack >= $LIBNFNCONNTRACK_REQUIRED))

CFLAGS="$CFLAGS $LIBNFCONNTRACK_CFLAGS"
CMM_LIBS="$LIBNFCONNTRACK_LIBS"
AC_SUBST(CMM_LIBS)

AC_OUTPUT(Makefile src/Makefile)
